// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventPipelineRunner runEventPipeline() runs remaining steps 1`] = `
Array [
  Array [
    "emitToBufferStep",
    Array [
      Object {
        "distinct_id": "my_id",
        "event": "default event",
        "ip": "127.0.0.1",
        "now": "2020-02-23T02:15:00.000Z",
        "properties": Object {},
        "site_url": "http://localhost",
        "team_id": 2,
        "timestamp": "2020-02-23T02:15:00.000Z",
        "uuid": "uuid1",
      },
    ],
  ],
  Array [
    "pluginsProcessEventStep",
    Array [
      Object {
        "distinct_id": "my_id",
        "event": "default event",
        "ip": "127.0.0.1",
        "now": "2020-02-23T02:15:00.000Z",
        "properties": Object {},
        "site_url": "http://localhost",
        "team_id": 2,
        "timestamp": "2020-02-23T02:15:00.000Z",
        "uuid": "uuid1",
      },
    ],
  ],
  Array [
    "processPersonsStep",
    Array [
      Object {
        "distinct_id": "my_id",
        "event": "default event",
        "ip": "127.0.0.1",
        "now": "2020-02-23T02:15:00.000Z",
        "properties": Object {},
        "site_url": "http://localhost",
        "team_id": 2,
        "timestamp": "2020-02-23T02:15:00.000Z",
        "uuid": "uuid1",
      },
      Object {
        "get": [Function],
        "person": Object {
          "created_at": "2020-02-23T02:15:00.000Z",
          "id": 123,
          "is_identified": true,
          "is_user_id": 0,
          "properties": Object {},
          "properties_last_operation": Object {},
          "properties_last_updated_at": Object {},
          "team_id": 2,
          "uuid": "uuid",
          "version": 0,
        },
        "personUpdateProperties": Object {},
      },
    ],
  ],
  Array [
    "prepareEventStep",
    Array [
      Object {
        "distinct_id": "my_id",
        "event": "default event",
        "ip": "127.0.0.1",
        "now": "2020-02-23T02:15:00.000Z",
        "properties": Object {},
        "site_url": "http://localhost",
        "team_id": 2,
        "timestamp": "2020-02-23T02:15:00.000Z",
        "uuid": "uuid1",
      },
    ],
  ],
  Array [
    "createEventStep",
    Array [
      Object {
        "distinctId": "my_id",
        "elementsList": Array [],
        "event": "$pageview",
        "eventUuid": "uuid1",
        "ip": "127.0.0.1",
        "properties": Object {},
        "teamId": 2,
        "timestamp": "2020-02-23T02:15:00.000Z",
      },
      Object {
        "get": [Function],
        "person": Object {
          "created_at": "2020-02-23T02:15:00.000Z",
          "id": 123,
          "is_identified": true,
          "is_user_id": 0,
          "properties": Object {},
          "properties_last_operation": Object {},
          "properties_last_updated_at": Object {},
          "team_id": 2,
          "uuid": "uuid",
          "version": 0,
        },
        "personUpdateProperties": Object {},
      },
    ],
  ],
]
`;

exports[`EventPipelineRunner runEventPipeline() runs steps starting from emitToBufferStep 1`] = `
Array [
  Array [
    "populateTeamDataStep",
    Array [
      Object {
        "distinct_id": "my_id",
        "event": "default event",
        "ip": "127.0.0.1",
        "now": "2020-02-23T02:15:00.000Z",
        "properties": Object {},
        "site_url": "http://localhost",
        "team_id": null,
        "timestamp": "2020-02-23T02:15:00.000Z",
        "token": "token1",
        "uuid": "uuid1",
      },
    ],
  ],
  Array [
    "emitToBufferStep",
    Array [
      Object {
        "distinct_id": "my_id",
        "event": "default event",
        "ip": "127.0.0.1",
        "now": "2020-02-23T02:15:00.000Z",
        "properties": Object {},
        "site_url": "http://localhost",
        "team_id": 2,
        "timestamp": "2020-02-23T02:15:00.000Z",
        "uuid": "uuid1",
      },
    ],
  ],
  Array [
    "pluginsProcessEventStep",
    Array [
      Object {
        "distinct_id": "my_id",
        "event": "default event",
        "ip": "127.0.0.1",
        "now": "2020-02-23T02:15:00.000Z",
        "properties": Object {},
        "site_url": "http://localhost",
        "team_id": 2,
        "timestamp": "2020-02-23T02:15:00.000Z",
        "uuid": "uuid1",
      },
    ],
  ],
  Array [
    "processPersonsStep",
    Array [
      Object {
        "distinct_id": "my_id",
        "event": "default event",
        "ip": "127.0.0.1",
        "now": "2020-02-23T02:15:00.000Z",
        "properties": Object {},
        "site_url": "http://localhost",
        "team_id": 2,
        "timestamp": "2020-02-23T02:15:00.000Z",
        "uuid": "uuid1",
      },
      Object {
        "get": [Function],
        "person": Object {
          "created_at": "2020-02-23T02:15:00.000Z",
          "id": 123,
          "is_identified": true,
          "is_user_id": 0,
          "properties": Object {},
          "properties_last_operation": Object {},
          "properties_last_updated_at": Object {},
          "team_id": 2,
          "uuid": "uuid",
          "version": 0,
        },
        "personUpdateProperties": Object {},
      },
    ],
  ],
  Array [
    "prepareEventStep",
    Array [
      Object {
        "distinct_id": "my_id",
        "event": "default event",
        "ip": "127.0.0.1",
        "now": "2020-02-23T02:15:00.000Z",
        "properties": Object {},
        "site_url": "http://localhost",
        "team_id": 2,
        "timestamp": "2020-02-23T02:15:00.000Z",
        "uuid": "uuid1",
      },
    ],
  ],
  Array [
    "createEventStep",
    Array [
      Object {
        "distinctId": "my_id",
        "elementsList": Array [],
        "event": "$pageview",
        "eventUuid": "uuid1",
        "ip": "127.0.0.1",
        "properties": Object {},
        "teamId": 2,
        "timestamp": "2020-02-23T02:15:00.000Z",
      },
      Object {
        "get": [Function],
        "person": Object {
          "created_at": "2020-02-23T02:15:00.000Z",
          "id": 123,
          "is_identified": true,
          "is_user_id": 0,
          "properties": Object {},
          "properties_last_operation": Object {},
          "properties_last_updated_at": Object {},
          "team_id": 2,
          "uuid": "uuid",
          "version": 0,
        },
        "personUpdateProperties": Object {},
      },
    ],
  ],
]
`;

exports[`EventPipelineRunner runLightweightCaptureEndpointEventPipeline() runs steps starting from emitToBufferStep 1`] = `
Array [
  Array [
    "populateTeamDataStep",
    Array [
      Object {
        "distinct_id": "my_id",
        "event": "default event",
        "ip": "127.0.0.1",
        "now": "2020-02-23T02:15:00.000Z",
        "properties": Object {},
        "site_url": "http://localhost",
        "team_id": null,
        "timestamp": "2020-02-23T02:15:00.000Z",
        "token": "token1",
        "uuid": "uuid1",
      },
    ],
  ],
  Array [
    "emitToBufferStep",
    Array [
      Object {
        "distinct_id": "my_id",
        "event": "default event",
        "ip": "127.0.0.1",
        "now": "2020-02-23T02:15:00.000Z",
        "properties": Object {},
        "site_url": "http://localhost",
        "team_id": 2,
        "timestamp": "2020-02-23T02:15:00.000Z",
        "uuid": "uuid1",
      },
    ],
  ],
  Array [
    "pluginsProcessEventStep",
    Array [
      Object {
        "distinct_id": "my_id",
        "event": "default event",
        "ip": "127.0.0.1",
        "now": "2020-02-23T02:15:00.000Z",
        "properties": Object {},
        "site_url": "http://localhost",
        "team_id": 2,
        "timestamp": "2020-02-23T02:15:00.000Z",
        "uuid": "uuid1",
      },
    ],
  ],
  Array [
    "processPersonsStep",
    Array [
      Object {
        "distinct_id": "my_id",
        "event": "default event",
        "ip": "127.0.0.1",
        "now": "2020-02-23T02:15:00.000Z",
        "properties": Object {},
        "site_url": "http://localhost",
        "team_id": 2,
        "timestamp": "2020-02-23T02:15:00.000Z",
        "uuid": "uuid1",
      },
      Object {
        "get": [Function],
        "person": Object {
          "created_at": "2020-02-23T02:15:00.000Z",
          "id": 123,
          "is_identified": true,
          "is_user_id": 0,
          "properties": Object {},
          "properties_last_operation": Object {},
          "properties_last_updated_at": Object {},
          "team_id": 2,
          "uuid": "uuid",
          "version": 0,
        },
        "personUpdateProperties": Object {},
      },
    ],
  ],
  Array [
    "prepareEventStep",
    Array [
      Object {
        "distinct_id": "my_id",
        "event": "default event",
        "ip": "127.0.0.1",
        "now": "2020-02-23T02:15:00.000Z",
        "properties": Object {},
        "site_url": "http://localhost",
        "team_id": 2,
        "timestamp": "2020-02-23T02:15:00.000Z",
        "uuid": "uuid1",
      },
    ],
  ],
  Array [
    "createEventStep",
    Array [
      Object {
        "distinctId": "my_id",
        "elementsList": Array [],
        "event": "$pageview",
        "eventUuid": "uuid1",
        "ip": "127.0.0.1",
        "properties": Object {},
        "teamId": 2,
        "timestamp": "2020-02-23T02:15:00.000Z",
      },
      Object {
        "get": [Function],
        "person": Object {
          "created_at": "2020-02-23T02:15:00.000Z",
          "id": 123,
          "is_identified": true,
          "is_user_id": 0,
          "properties": Object {},
          "properties_last_operation": Object {},
          "properties_last_updated_at": Object {},
          "team_id": 2,
          "uuid": "uuid",
          "version": 0,
        },
        "personUpdateProperties": Object {},
      },
    ],
  ],
]
`;
